some corrections in the Makefiles, additions in the source files and README.md

--- a/templates/MakeFile_c
+++ b/templates/MakeFile_c
@@ -5,9 +5,9 @@ LDFLAGS= -Iinclude -Linclude
 SRC_F=src
 BUILD_F=build
 
-default: app.exe run
+default: app.exe
 
-file.exe :app.o
+app.exe :app.o
 	$(CXX) $(BUILD_F)/app.o $(LDFLAGS) -o $(BUILD_F)/app.exe
 
 app.o:
